# NASA-Land-Coupler

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  setuprun.sh
cmake/modules/: lis_dependencies.cmake
env/: cheyenne.intel.17.0.1  cheyenne.intel.19.1.1  discover.gnu.9.3.0  discover.intel.14.0.3  discover.intel.19.1.0  discover.intel.19.1.3  discover.intel.20.0.0
env/cheyenne/: intel-17.0.1  intel-19.1.1
env/discover-12.5/: intel-19.1.3  intel-2021.4.0
env/discover-15.4/: intel-2023.2.1
scripts/: setupenv.sh
src/driver/: app.F90  driver.F90  fd_nlc.yaml  fields.F90  mediator.F90
templates/runconfig/: nlc.runconfig.lnd  nlc.runconfig.lndgwr  nlc.runconfig.lndgwrmed  nlc.runconfig.lndgwrmed.ens020  nlc.runconfig.lndhyd  nlc.runconfig.lndhydmed  nlc.runconfig.lndhydmed.ens002  nlc.runconfig.lndhydmed.ens020  nlc.runconfig.lndpf  nlc.runconfig.wrfhydropf.oneway
templates/runscripts/: run.discover.intel.14.0.3  run.discover.intel.19.1.0  run.discover.intel.19.1.3  run.discover.intel.20.0.0
templates/runscripts/discover-12.5/: run.intel-19.1.3  run.intel-2021.4.0
templates/runscripts/discover-15.4/: run.intel-2023.2.1
usecases/: coupled_irene.noah.nldas2  coupled_irene.noahmp.nldas2  coupled_irene_noMed.noah.nldas2  coupled_lw.noahmp_v4.0.1.nldas2  coupled_lw.wrfhydropf.oneway  coupled_lw_ens.noahmp_v4.0.1.nldas2  coupled_tar.noahmp_v4.0.1_cold.nldas2  coupled_tuolumne.ens002.noahmp.nldas2  coupled_tuolumne.ens020.noahmp_v4.0.1_da.nldas2  coupled_tuolumne.noah.nldas2  coupled_tuolumne.noahmp.nldas2  coupled_tuolumne.noahmp_v4.0.1_cold.nldas2  coupled_tuolumne.noahmp_v4.0.1_da.nldas2  coupled_tuolumne_noMed.noah.nldas2  sbys_tuolumne_hyd.ens002.ldas  stdalone_irene_lnd.nldas2
